# cafa6

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
notebooks/: kaggle_train.ipynb
scripts/: generate_embeddings.py  predict.py  train.py
src/cafa6/: __init__.py  config.py  dataset.py  dummy.py  embeddings.py  fasta.py  inference.py  metrics.py  model.py  ontology.py  propagation.py  submission.py  trainer.py
